--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+cargo-features = ["different-binary-name"]
+
 [package]
 name = "pigeon-rs"
 version = "0.1.0"
@@ -31,3 +33,8 @@ polars = "0.14.8"
 polars-core = "0.14.8"
 connectorx = { version = "0.2.0", features = ["src_postgres", "dst_polars"] }
 postgres = "0.19.2"
+
+[[bin]]
+name = "pigeon-rs"
+filename = "pigeon"
+path = "src/main.rs"
