Align description with github

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ cargo-features = ["different-binary-name"]
 name = "pigeon-rs"
 version = "0.1.0"
 authors = ["quambene <contact.quambene@gmail.com>"]
-description = "Command line tool for efficient and cheap email automation"
+description = "Command line tool for cheap and efficient email automation"
 edition = "2018"
 rust-version = "1.56"
 homepage = "https://github.com/quambene/pigeon-rs"
