Fix too much keywords error

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 homepage = "https://github.com/quambene/pigeon-rs"
 repository = "https://github.com/quambene/pigeon-rs"
 documentation = "https://github.com/quambene/pigeon-rs"
-keywords = ["mail", "email", "automatization", "automatisation", "automation", "cli"]
+keywords = ["mail", "email", "automatization", "automation", "cli"]
 categories = ["command-line-utilities", "cli", "email"]
 readme = "README.md"
 license = "Apache-2.0"
