Implement --attachment for aws

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,8 @@ url = "2.2.2"
 uuid = { version = "0.8.2", features = ["v4"] }
 lettre = { version = "0.10.0-rc.4", features = ["file-transport"] }
 infer = "0.5.0"
+base64 = "0.13.0"
+bytes = "1.1.0"
 
 [[bin]]
 name = "pigeon-rs"
