--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,9 @@ license = "Apache-2.0"
 
 [dependencies]
 anyhow = "1.0.40"
-rusoto_sesv2 = "0.46.0"
-rusoto_core = "0.46.0"
-rusoto_credential = "0.46.0"
+rusoto_ses = { version = "0.47.0", default-features = false, features = ["rustls"] }
+rusoto_core = { version = "0.47.0", default-features = false, features = ["rustls"] }
+rusoto_credential = "0.47.0"
 yaml-rust = "0.4.5"
 serde = { version = "1.0.125", features = ["derive"] }
 serde_yaml = "0.8.17"
