--- a/test_data/empty_message.yaml
+++ b/test_data/empty_message.yaml
@@ -4,6 +4,6 @@
 # The subject of your email
 subject: "Test subject"
 # The plaintext version
-text: "This is a test message (plaintext)."
+text: ""
 # The html version
-html: "<p>This is a test message (html).</p>"
+html: ""
