--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ uuid = { version = "0.8.2", features = ["v4"] }
 lettre = { version = "0.10.0-rc.4", default-features = false, features = ["builder", "pool", "smtp-transport", "file-transport", "rustls-tls"] }
 infer = "0.5.0"
 bytes = "1.1.0"
+base64 = "0.13.0"
 
 [[bin]]
 name = "pigeon-rs"
