--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,12 +26,12 @@ tokio = "1.12.0"
 csv = "1.1.6"
 clap = "2.33.3"
 chrono = "0.4.19"
-polars = { git = "https://github.com/pola-rs/polars", rev = "dd70f3167f53e4ba59a0fe9c2f8aca18cdbb6b0d", version = "0.17", features = ["dtype-u8"] }
-connectorx = { git = "https://github.com/sfu-db/connector-x", rev = "0bc0b928e43c53b87c6ab4049f85a8042ac62bed", version = "0.2.2-alpha.5", features = ["src_postgres", "dst_arrow2"] }
+polars = { version = "0.20.0", features = ["dtype-u8"] }
+connectorx = { git = "https://github.com/sfu-db/connector-x", tag = "v0.3.0", features = ["src_postgres", "dst_arrow2"] }
 postgres = "0.19.2"
 url = "2.2.2"
 uuid = { version = "0.8.2", features = ["v4"] }
-lettre = { version = "0.10.0-rc.4", default-features = false, features = ["builder", "pool", "smtp-transport", "file-transport", "rustls-tls"] }
+lettre = { version = "0.10.0", default-features = false, features = ["builder", "pool", "smtp-transport", "file-transport", "rustls-tls"] }
 infer = "0.5.0"
 bytes = "1.1.0"
 base64 = "0.13.0"
