--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,3 @@
-cargo-features = ["different-binary-name"]
-
 [package]
 name = "pigeon-rs"
 version = "0.3.0"
@@ -37,6 +35,5 @@ bytes = "1.1.0"
 base64 = "0.13.0"
 
 [[bin]]
-name = "pigeon-rs"
-filename = "pigeon"
+name = "pigeon"
 path = "src/main.rs"
