--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -1,7 +1,7 @@
 name: Rust CI
 on:
     push:
-      branches: [master]
+      branches: [main]
     pull_request:
 env:
   CARGO_TERM_COLOR: always
