--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -48,8 +48,15 @@ jobs:
     steps:
         - uses: actions/checkout@v4
         - uses: dtolnay/rust-toolchain@stable
-        - name: cargo test
-          run: cargo test --locked
+        - name: cargo test --lib
+          run: cargo test --lib --locked
+  integration-test:
+    runs-on: ubuntu-latest
+    steps:
+        - uses: actions/checkout@v4
+        - uses: dtolnay/rust-toolchain@stable
+        - name: cargo test --test '*'
+          run: cargo test --test '*' --locked
   doc-test:
     runs-on: ubuntu-latest
     steps:
