--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ categories = ["command-line-utilities", "email"]
 readme = "README.md"
 license = "Apache-2.0"
 
+[[bin]]
+name = "pigeon"
+path = "src/main.rs"
+
 [dependencies]
 anyhow = "1.0.40"
 rusoto_ses = { version = "0.47.0", default-features = false, features = ["rustls"] }
@@ -34,6 +38,6 @@ infer = "0.5.0"
 bytes = "1.1.0"
 base64 = "0.13.0"
 
-[[bin]]
-name = "pigeon"
-path = "src/main.rs"
+[dev-dependencies]
+assert_cmd = "2.0.14"
+predicates = "3.1.0"
