--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -50,6 +50,27 @@ jobs:
         - uses: dtolnay/rust-toolchain@stable
         - name: cargo test --lib
           run: cargo test --lib --locked
+  integration-test:
+    runs-on: ubuntu-latest
+    steps:
+        - uses: actions/checkout@v4
+        - uses: dtolnay/rust-toolchain@stable
+        - name: cargo test --test '*'
+          run: cargo test --test '*' --locked
+  os-test:
+    runs-on: ${{ matrix.os }}
+    name: os-test / ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-latest, windows-latest]
+    steps:
+        - uses: actions/checkout@v4
+        - uses: dtolnay/rust-toolchain@stable
+        - name: cargo test --lib
+          run: cargo test --lib --locked
+        - name: cargo test --test '*'
+          run: cargo test --test '*' --locked
   doc-test:
     runs-on: ubuntu-latest
     steps:
